Added updateBeerNotFound and also a load of fixes